# -

./: .gitignore  README.md  go.work  go.work.sum
secagent/: .gitignore  ARCHITECTURE.md  Makefile  README.md  config.example.yaml  pyproject.toml
secagent/.github/workflows/: security-scan.yml
secagent/docs/: AUTHORIZATION.md  COMPLIANCE.md  MCP_SERVER.md  OPTIMIZATION.md  OPTIMIZATION_SUMMARY.md  QUICKSTART.md  TESTING_EXPERIENCE.md
secagent/docs/superpowers/specs/: 2026-06-22-vuln-finding-upgrade-design.md
secagent/scripts/: batch_scan.py  butian_scraper.py  extract_butian.py  install.sh  link-binaries.sh  run-secagent-mcp.sh
secagent/scripts/reverse/: aihot_reverse.py  analyze_claude_detection.py  reproduce_claude_detection.py  reverse_bilibili.py  reverse_codex.py
secagent/src/secagent/: __init__.py  config.py
secagent/src/secagent/adapters/: __init__.py  base.py  dnsx.py  ffuf.py  gitleaks.py  httpx_adapter.py  katana.py  naabu.py  nuclei.py  simple_crawler.py  subfinder.py  theharvester.py  tlsx.py  (+2 more)
secagent/tests/: conftest.py  helper.py  run_real_targets.py  test_analyzers.py  test_analyzers_web.py  test_attack_surface_scan.py  test_audit.py  test_authz.py  test_batch_scan.py  test_binary_analyzer.py  test_blocklist.py  test_check_health.py  test_cli_authz.py  test_client_report.py  test_concurrency.py  test_config.py  test_crawl_target.py  test_decoders_core.py  test_decorator_error_handling.py  test_discover_paths_tool.py  test_enumerate_subdomains_tool.py  test_errors.py  test_ffuf_adapter.py  test_finding.py  test_gate.py  test_gather_osint.py  test_headers.py  test_hunterone_workflow.py  test_installer.py  test_launcher.py  test_m5_new_tools.py  test_mcp_reverse_tools.py  test_monitor.py  test_naabu_adapter.py  test_oob.py  test_passive_recon.py  test_probe_services.py  test_proxy.py  test_quota.py  test_real_targets_results.json  (+14 more)
secagent/wordlists/: paths_builtin.txt
(+96 files in other folders)
