[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "secagent"
version = "0.1.0"
description = "Security MCP server wrapping SuperSpider + open-source tooling"
requires-python = ">=3.9"
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
mcp = ["mcp>=1.2"]

[project.scripts]
secagent = "secagent.cli:main"
secagent-server = "secagent.server.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"secagent.storage.migrations" = ["*.sql"]

[tool.pytest.ini_options]
testpaths = ["tests"]
