[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "secagent"
version = "0.1.0"
description = "Security MCP server wrapping SuperSpider + open-source tooling"
requires-python = ">=3.9"
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
mcp = ["mcp>=1.2"]

[project.scripts]
secagent = "secagent.cli:main"
secagent-server = "secagent.server.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"secagent.storage.migrations" = ["*.sql"]
"secagent.wordlists" = ["*.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["UP006", "UP007"]
"src/secagent/adapters/web_vuln.py" = ["N806"]
"src/secagent/analyzers/binary_analyzer.py" = ["N806"]
"src/secagent/server/__main__.py" = ["N806"]
"src/secagent/report/pdf_report.py" = ["E402"]
"src/secagent/workflow/hunterone.py" = ["F401"]
